* reactivate taxReport * organize components * dont pack a "global-all-you-can-eat-javascript-bundle" but split bundles for user

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name=viewport content="width=device-width,initial-scale=1">
   <title>CryptoTrack</title>
 </head>
-<body>
+<body class="hold-transition skin-black sidebar-mini fixed">
 <div id="app">
   <app></app>
 </div>
