--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name=viewport content="width=device-width,initial-scale=1">
   <title>CryptoTrack</title>
 </head>
-<body class="hold-transition skin-black sidebar-mini fixed">
+<body class="hold-transition skin-black sidebar-mini">
 <div id="app">
   <app></app>
 </div>
